# litelite

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GENESIS.md  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
app/: .gitignore  Cargo.toml  README.md  build.sh  index.html  serve.py
app/src/: lib.rs
crates/applite/: Cargo.toml
crates/applite/src/: check.rs  eval.rs  lex.rs  lib.rs  parse.rs
crates/backtestlite/: Cargo.toml
crates/backtestlite/src/: engine.rs  lib.rs
crates/backtestlite/tests/: family_check.rs  scratch_family.rs  zz_scratch_validate.rs
crates/caplite/: Cargo.toml
crates/caplite/src/: lib.rs
crates/diaglite/: Cargo.toml
crates/diaglite/src/: lib.rs
crates/evmlite/: Cargo.toml
crates/evmlite/src/: asm.rs  interp.rs  lib.rs
crates/fuellite/: Cargo.toml
crates/fuellite/src/: lib.rs
crates/lexlite/: Cargo.toml
crates/lexlite/src/: lib.rs
crates/modlite/: Cargo.toml
crates/modlite/src/: lib.rs
crates/parselite/: Cargo.toml
crates/parselite/src/: lib.rs
crates/prooflite/: Cargo.toml
crates/prooflite/src/: eval.rs  lex.rs  lib.rs  parse.rs
crates/stratlite/: Cargo.toml
crates/stratlite/examples/: famval.rs
crates/stratlite/src/: eval.rs  lex.rs  lib.rs  parse.rs
experiment/: .gitignore  Cargo.toml  M6.md
experiment/appbench/: Cargo.toml  README.md
experiment/appbench/corpus/: seed.jsonl
experiment/appbench/results/: solve_base.jsonl  solve_c5.jsonl
experiment/appbench/src/: main.rs
experiment/appbench/tasks/: hard.jsonl  heldout.jsonl  train.jsonl
experiment/corpus/: README.md  seed.jsonl
experiment/data/: README.md
experiment/hf/: README.md  card_prooflite.md  card_stratlite.md  dataset_card.md  p6_card.txt  publish.py  s5_card.txt
experiment/proofbench/: .gitignore  Cargo.toml
experiment/proofbench/corpus/: README.md  seed.jsonl
experiment/proofbench/problems/: README.md  heldout.jsonl  train.jsonl
experiment/proofbench/results/: README.md  base.jsonl  benchmark.txt  c5.jsonl  c6.jsonl  c7.jsonl  c8.jsonl  cinit.jsonl  s5gen.jsonl  solve_base.jsonl  solve_c6.jsonl  solve_cinit.jsonl  solve_s1.jsonl  solve_s3.jsonl  solve_s5.jsonl  solve_s5_train.jsonl
experiment/proofbench/src/: main.rs
experiment/results/: README.md  base.jsonl  benchmark.txt  c7.jsonl
experiment/src/: api.rs  data.rs  main.rs  reward.rs  score.rs
experiment/train/: README.md  bench.py  bench_prooflite.sh  requirements.txt  run_loop.sh  run_prooflite.py  run_solve.py  run_specd.py  run_transfer.sh  select.py  solve_bench.py  test_select.py  train.py
paper/: COMPLETENESS.md  DRAFT.md  OUTLINE.md  mdtolatex.py  paper.tex
port/: PORT.md
scripts/: caps.sh  publish.sh
src/: lib.rs
