[workspace]
members = [
    "crates/diaglite",
    "crates/lexlite",
    "crates/parselite",
    "crates/fuellite",
    "crates/caplite",
    "crates/prooflite",
    "crates/evmlite",
    "crates/modlite",
    "crates/stratlite",
    "crates/backtestlite",
    "crates/applite",
]
# Plain `cargo test` / `cargo check` at the root must cover EVERY crate, not
# just the facade's dependency graph — prooflite is a member the facade does
# not depend on, and a green that skips it is a false green.
default-members = ["crates/*", "."]

# §5's harness takes deps (HTTP, JSON) and so can never join this graph:
# rule 1 forbids them in the kit, and rule 5 requires every member to stay
# wasm32-green. Excluded here AND its own workspace root, so neither side can
# accidentally pull the other in. app/ is the same seam: a leaf artifact
# (the vibe-coding shell), not a kit member.
exclude = ["experiment", "app"]

# Every crate inherits these. The version lives HERE, once: a release is a
# one-line edit, and cargo itself rejects drift between it and the
# [workspace.dependencies] versions below (a publish would fail).
[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/compusophy/litelite"
readme = "README.md"

# Internal deps, declared once. `version` + `path` means a git checkout builds
# against the local crate while a published crate depends on the registry one.
[workspace.dependencies]
diaglite = { path = "crates/diaglite", version = "0.2.0" }
lexlite = { path = "crates/lexlite", version = "0.2.0" }
parselite = { path = "crates/parselite", version = "0.2.0" }
fuellite = { path = "crates/fuellite", version = "0.2.0" }
caplite = { path = "crates/caplite", version = "0.2.0" }
evmlite = { path = "crates/evmlite", version = "0.2.0" }
modlite = { path = "crates/modlite", version = "0.2.0" }
stratlite = { path = "crates/stratlite", version = "0.2.0" }

[package]
name = "litelite"
description = "A kit for purpose-sized languages: buy total verification with smallness. Diagnostics, lexing, parsing, fuel, and capability tables — the invariants paid once."
keywords = ["language", "compiler", "sandbox", "fuel", "verification"]
categories = ["compilers", "parser-implementations"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
diaglite.workspace = true
lexlite.workspace = true
parselite.workspace = true
fuellite.workspace = true
caplite.workspace = true
evmlite.workspace = true
modlite.workspace = true
