[package]
name = "backtestlite"
description = "The stratlite verifier: a deterministic integer backtest engine plus the generate-verify-keep predicate — compile, halt within fuel, survive the data, clear the activity gate."
keywords = ["backtest", "trading", "deterministic", "verification", "strategy"]
categories = ["finance", "simulation"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
diaglite.workspace = true
caplite.workspace = true
stratlite.workspace = true
