[package]
name = "caplite"
description = "Host-capability tables as data: one declarative table per language drives type checking, import emission, docs, and a machine-checkable cross-boundary parity manifest."
keywords = ["capability", "sandbox", "host", "manifest", "language"]
categories = ["compilers", "development-tools"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
