[package]
name = "diaglite"
description = "Span + Diag diagnostics kernel for purpose-sized languages: byte spans, line/col, caret snippets that never panic on mid-char offsets."
keywords = ["diagnostics", "span", "error", "compiler", "language"]
categories = ["compilers", "parser-implementations"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
