[package]
name = "evmlite"
description = "EVM bytecode assembler (two-pass label resolution, minimal-width push, init wrapper) plus a minimal dependency-free EVM-subset interpreter as its diff-oracle."
keywords = ["evm", "assembler", "bytecode", "ethereum", "interpreter"]
categories = ["compilers", "emulators"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
