[package]
name = "fuellite"
description = "Fuel and byte-budget primitives: mechanical termination and output bounds. One shared budget across all composition, so fractal recursion terminates by construction."
keywords = ["fuel", "sandbox", "termination", "budget", "interpreter"]
categories = ["compilers", "development-tools"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
