[package]
name = "lexlite"
description = "Byte-cursor lexer kit for purpose-sized languages: comments, idents, digits, and UTF-8-safe char decode by construction."
keywords = ["lexer", "tokenizer", "compiler", "language", "parsing"]
categories = ["compilers", "parser-implementations"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
diaglite.workspace = true
