[package]
name = "modlite"
description = "A wasm binary module builder: LEB128, section framing, function/import/export/memory/data assembly with index discipline. The mechanical layer of a wasm backend, no language lowering."
keywords = ["wasm", "webassembly", "emitter", "codegen", "binary"]
categories = ["compilers", "wasm"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
