[package]
name = "parselite"
description = "Recursive-descent parser harness with the depth guard baked in: deeply nested input returns a diagnostic, never a stack overflow."
keywords = ["parser", "recursive-descent", "compiler", "language", "sandbox"]
categories = ["compilers", "parser-implementations"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
diaglite.workspace = true
