[package]
name = "prooflite"
description = "The litelite reference language: total, fuel-bounded, output-capped. Every program halts within its fuel — by construction."
keywords = ["language", "interpreter", "sandbox", "fuel", "total"]
categories = ["compilers", "parser-implementations"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
diaglite.workspace = true
lexlite.workspace = true
parselite.workspace = true
fuellite.workspace = true
caplite.workspace = true
