[package]
name = "stratlite"
description = "A total, fuel-bounded trading-strategy language: every decision halts within its fuel and look-ahead is unrepresentable. Pairs with backtestlite, its deterministic verifier."
keywords = ["language", "trading", "strategy", "sandbox", "deterministic"]
categories = ["compilers", "finance"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
diaglite.workspace = true
lexlite.workspace = true
parselite.workspace = true
fuellite.workspace = true
